Fix blog styling on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@ body {
 body.dark {
     -webkit-font-smoothing: antialiased;
     --bg: #121212;
-    --textNormal: rgba(255, 255, 255, 0.88);
+    --textNormal: white;
     --textTitle: white;
     --textLink: coral;
     --hr: hsla(0, 0%, 100%, 0.2);
@@ -133,12 +133,13 @@ hr {
 }
 
 .post-title {
+    max-width: 80%;
     font-weight: 900;
     font-size: 2.5rem;
 }
 
 .post-date {
-    min-width: max-content;
+    min-width: 20%;
     font-size: 1.125rem;
     text-align: end;
     padding-left: 1em;
@@ -166,6 +167,19 @@ hr {
 @media (max-width: 600px) {
     .container, .post-list-item-container {
         max-width: 100%;
+    }
+
+    .post-list-item-header {
+        flex-direction: column;
+    }
+
+    .post-title {
+        max-width: 100%;
+        font-size: 2.25rem;
+    }
+
+    .post-date {
+        padding-left: 0;
     }
 }
 
